Created the class KvpParser and implemented it's basic functionality

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "ArtKoder\\KvpParser\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Francisco Fernandez",
