I'm trying to set up the package so that tests files are not included when the package is installed with composer
That's why I added the "archive" section
Also removed the "autoload-dev" from composer.json
and set it up in the boostrap.php

--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,6 @@
             "ArtKoder\\KvpParser\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Unit\\": "tests/unit"
-        }
-    },
     "authors": [
         {
             "name": "Francisco Fernandez",
@@ -24,5 +19,8 @@
     },
     "scripts": {
         "test": "./vendor/bin/phpunit"
+    },
+    "archive": {
+        "exclude": ["tests", "phpunit.xml"]
     }
 }
